# GPhub-kit

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
examples/EX_01/: example_01.py
examples/EX_01/scripts/: lib_DACE.m  lib_DiceKriging.r  lib_GPyTorch.py  lib_STK.m
examples/EX_02/: example_02.py
examples/EX_02/scripts/: lib_GPJax.py  lib_GPy.py
examples/EX_03/: example_03.py
examples/EX_03/data/: train_x.csv
examples/EX_03/scripts/: lib_EGObox.py
examples/EX_04/: example_04.py
examples/EX_04/scripts/: lib_GPML.m  lib_UQLab.m  lib_scikitlearn.py
examples/EX_05/: example_05.py
examples/EX_05/scripts/: lib_OpenTURNS.py  lib_SMT.py
img/logo/: GPhub-kit-Logo.key
src/gphubkit/: __init__.py  __main__.py
src/gphubkit/benchmark/: __init__.py  base.py  bm.py  comp.py  cust.py  toys.py
src/gphubkit/benchmark/database/BM_01/data/: dataset_x.csv  dataset_y.csv  test_x.csv  test_y.csv  train_x.csv  train_y.csv
src/gphubkit/benchmark/database/BM_02/data/: dataset_x.csv  dataset_y.csv  test_x.csv  test_y.csv  train_x.csv  train_y.csv
src/gphubkit/benchmark/database/BM_03/data/: dataset_x.csv  dataset_y.csv  test_x.csv  test_y.csv  train_x.csv  train_y.csv
src/gphubkit/benchmark/database/BM_04/data/: dataset_x.csv  dataset_y.csv  test_x.csv  test_y.csv  (+2 more)
src/gphubkit/data/: __init__.py  loader.py  splitter.py  synthetic.py
src/gphubkit/launcher/: executor.py  processer.py  runner.py
src/gphubkit/metrics/: __init__.py  base.py
src/gphubkit/plotter/: __init__.py  crossvalidation.py  prediction.py  radar.py  utils.py
src/gphubkit/utils/: __init__.py  logo_ascii.py  templates.py
(+192 files in other folders)
